<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps!</string>
    <string name="APP1">SPOTIFY STREAMER</string>
    <string name="APP2">SCORES APP</string>
    <string name="APP3">LIBRARY APP</string>
    <string name="APP4">BUILD IT TOGETHER</string>
    <string name="APP5">XYZ READER</string>
    <string name="APP6">CAPSTONE: MY OWN APP</string>
    <string name="TS_6">CAPSTONE: MY OWN APP</string>
</resources>
