<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:gravity="center"
            android:textSize="25sp"
            />
        <Button
            style="@style/ButtonS"
            android:id="@+id/b_app1"
            android:text="@string/APP1"
            android:onClick="launchApp1"
            />
        <Button
            style="@style/ButtonS"
            android:id="@+id/b_app2"
            android:text="@string/APP2"
            android:onClick="launchApp2"
            />
        <Button
            style="@style/ButtonS"
            android:id="@+id/b_app3"
            android:text="@string/APP3"
            android:onClick="launchApp3"
            />
        <Button
            style="@style/ButtonS"
            android:id="@+id/b_app4"
            android:text="@string/APP4"
            android:onClick="launchApp4"
            />
        <Button
            style="@style/ButtonS"
            android:id="@+id/b_app5"
            android:text="@string/APP5"
            android:onClick="launchApp5"
            />
        <Button
            style="@style/ButtonS"
            android:id="@+id/b_app6"
            android:text="@string/APP6"
            android:onClick="launchApp6"
            android:background="#F44336"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>
</RelativeLayout>
